--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 
+  <ItemGroup>
+    <ProjectReference Include="$(MSBuildProjectDirectory)\..\..\..\neo\src\neo\neo.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <VersionPrefix>3.1.0</VersionPrefix>
     <TargetFramework>net6.0</TargetFramework>
@@ -12,9 +16,5 @@
     <RepositoryType>git</RepositoryType>
     <RepositoryUrl>https://github.com/neo-project/neo-modules.git</RepositoryUrl>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Neo" Version="3.1.0" />
-  </ItemGroup>
 
 </Project>
