Manual merge of: Limit result stack #696: https://github.com/neo-project/neo-modules/pull/696/files See also: https://github.com/neo-project/neo/issues/2666

--- a/src/ApplicationLogs/ApplicationLogs/config.json
+++ b/src/ApplicationLogs/ApplicationLogs/config.json
@@ -1,7 +1,8 @@
 {
   "PluginConfiguration": {
     "Path": "ApplicationLogs_{0}",
-    "Network": 860833102
+    "Network": 860833102,
+    "MaxStackSize": 65535
   },
   "Dependency": [
     "RpcServer"
