--- a/src/OracleService/OracleService/config.json
+++ b/src/OracleService/OracleService/config.json
@@ -3,6 +3,7 @@
     "Network": 860833102,
     "Nodes": [],
     "MaxTaskTimeout": 432000000,
+    "MaxOracleTimeout": 10000,
     "AllowPrivateHost": false,
     "AllowedContentTypes": [ "application/json" ],
     "Https": {
